# SPH-Simulation

./: CMakeLists.txt  README.md  README.txt  check-dependencies
.github/workflows/: cmake-single-platform.yml
QA/: .particleMethodsTest.cpp.swp  CMakeLists.txt  particleMethodsTest.cpp  test-fixtures.h  test_particleMethods.cpp
include/: particleMethods.h  windowManager.h  windowSimulation.h
src/: mainLoop.cpp  particleMethods.cpp  test_run.cpp  viz.cpp  windowGUI.cpp  windowManager.cpp  windowSimulation.cpp
src/include/: particleMethods.h  windowGUI.h  windowManager.h  windowSimulation.h
